typescript/checker/tests/conformance/es6/Symbols/symbolProperty49.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            78,
        ),
        hi: BytePos(
            84,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty49.ts:6:10
  |
6 |         [Symbol.iterator]() { }
  |          ^^^^^^

